--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -190,7 +190,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title bannercontrolpaneltext" id="modal-title-add">
-          USER MODIFIED
+          USER MODIFIER
         </h5>
       </div>
       <div class="modal-body" *ngIf="currentUserInfo">
@@ -270,13 +270,13 @@
               data-target="#settingsModal"
               data-dismiss="modal"
             >
-              Salva modifiche
+              Save
             </button>
             <button
               (click)="cancelPutUser(); closeSettingsModal()"
               class="btn btn-primary"
             >
-              Annulla modifiche
+              Cancel
             </button>
           </div>
         </div>
