--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -172,7 +172,7 @@
                       <path
                         d="M3 8.812a4.999 4.999 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812z"
                       /></svg
-                    >Sing Out</a
+                    >Sign Out</a
                   >
                 </li>
               </ul>
