--- a/Epic_Trading/src/app/components/landing-page/landing-page.component.html
+++ b/Epic_Trading/src/app/components/landing-page/landing-page.component.html
@@ -321,9 +321,24 @@ of Simple CSS Waves-->
 <!-- Contact Section FOOTER -->
 <section id="contact" class=" bannercontrolpanel py-5 ">
   <div class="container">
-      <h2 class="text-center text-white">Contact</h2>
-      <div class="container">
-        <h2 class="text-center text-white">aggiungo qui i contatti </h2>
+      <h2 class="text-center text-black mb-5">CONTACT</h2>
+      <div class="container d-flex justify-content-between">
+        <div class="">
+          <a class="bg_links social github mt-3" href="https://github.com/Lucaquaglino" target="_blank">
+            <img style="width: 50px; height: 50px;" src="https://www.svgrepo.com/show/512317/github-142.svg" alt="">
+         </a>
+        </div>
+<div>
+
+ <a class="bg_links social linkedin" href="https://www.linkedin.com/in/lucaquaglino/" target="_blank">
+    <img style="width: 50px; height: 50px ;" src="https://www.svgrepo.com/show/508852/linkedin.svg" alt="">
+ </a>
+      </div>
+      <div class="">
+        <a class="bg_links social github" href="mailto:luca.quaglino@hotmail.com" target="_blank">
+          <img class="mt-2" style="width: 55px; height: 55px;" src="https://www.svgrepo.com/show/521736/mail.svg" alt="">
+       </a>
+      </div>
       </div>
   </div>
 </section>
