--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -157,7 +157,7 @@
                 <li>
                   <a
                     class="dropdown-item d-flex align-items-center"
-                    routerLink="/login"
+                    routerLink="/controlPanel"
                     routerLinkActive="active"
                     (click)="logOut()"
                     ><svg
