--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -157,7 +157,7 @@
                 <li>
                   <a
                     class="dropdown-item d-flex align-items-center"
-                    routerLink="/controlPanel"
+                    routerLink="/landingPage"
                     routerLinkActive="active"
                     (click)="logOut()"
                     ><svg
@@ -182,7 +182,6 @@
       </div>
     </div>
   </nav>
-  <!-- <hr class="m-0 p-0" style="color: grey;"> -->
 </header>
 
 <div id="modalOk" class="modal fade modal-lg">
@@ -284,33 +283,7 @@
     </div>
   </div>
 </div>
-<div id="modalError" class="modal fade modal-lg text-danger">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="modal-title-add-error">
-          Prodotto non aggiunto!
-        </h5>
-        <h5 class="modal-title" id="modal-title-mod-error">
-          Prodotto non modificato!
-        </h5>
-        <h5 class="modal-title" id="modal-title-del-error">
-          Prodotto non eliminato!
-        </h5>
-      </div>
-      <div class="modal-body">
-        <p id="add-modal-error">Errore durante il caricamento del prodotto.</p>
-        <p id="mod-modal-error">Errore durante la modifica del prodotto.</p>
-        <p id="del-modal-error">
-          Errore durante la cancellazione del prodotto.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalOk">
-  Mostra modale
-</button> -->
+
 <div class="about">
   <a
     class="bg_links social mail"
