--- a/Epic_Trading/src/app/components/error/error.component.html
+++ b/Epic_Trading/src/app/components/error/error.component.html
@@ -1,16 +1,3 @@
-<!-- <nav>
-  <div class="menu">
-      <p class="website_name">LOGO</p>
-      <div class="menu_links">
-          <a href="" class="link">about</a>
-          <a href="" class="link">projects</a>
-          <a href="" class="link">contacts</a>
-      </div>
-      <div class="menu_icon">
-          <span class="icon"></span>
-      </div>
-  </div>
-</nav> -->
 
 <section class="wrapper">
 
@@ -53,7 +40,7 @@
       <div class="text">
           <article>
               <p>Uh oh! Looks like you got lost. <br>Go back to the HOMEPAGE if you dare!</p>
-              <button routerLink="/controlPanel" >i dare!</button>
+              <button routerLink="/landingPage" >i dare!</button>
           </article>
       </div>
 
